@@ -1,5 +1,5 @@
 # Everything under browser/ except for extensions/ (installed in to
-# MOZ_ADDONDIR) and searchplugins/ (installed in browser/distribution/searchplugins)
+# MOZ_ADDONDIR) and searchplugins/ (installed in distribution/searchplugins)
 @MOZ_LIBDIR@/browser/chrome
 @MOZ_LIBDIR@/browser/components
 @MOZ_LIBDIR@/browser/icons
@@ -30,8 +30,6 @@
 @MOZ_LIBDIR@/crashreporter
 %%endif
 
-# To maintain compatibility with ubuntu-defaults-builder (will be symlinked
-# from browser/distribution/distribution.ini)
 debian/distribution.ini @MOZ_LIBDIR@/distribution
 
 @MOZ_LIBDIR@/browser/extensions/\{972ce4c6-7e08-4474-a285-3208198ce6fd\} @MOZ_ADDONDIR@/extensions
@@ -39,7 +37,7 @@ debian/distribution.ini @MOZ_LIBDIR@/distribution
 %%define SHIP_TESTPILOT
 %%endif
 %%ifdef SHIP_TESTPILOT
-@MOZ_LIBDIR@/browser/distribution/extensions/testpilot@labs.mozilla.com.xpi @MOZ_ADDONDIR@/distribution/extensions
+@MOZ_LIBDIR@/distribution/extensions/testpilot@labs.mozilla.com.xpi @MOZ_ADDONDIR@/distribution/extensions
 %%endif
 
 debian/@MOZ_APP_NAME@.desktop usr/share/applications
